Implemented the mapstruct mappers for customer & Beer

--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 						</path>
 					</annotationProcessorPaths>
 					<compilerArgs>
-						<compilerArgs>-Amapstruct.defaultComponentModel=spring</compilerArgs>
+						<compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
