--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 
 logging.level.com.bhupi=debug
 spring.profiles.active=localmysql
+
+
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
